--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.6.RELEASE</version>
+		<version>2.2.2.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	
@@ -18,7 +18,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<spring-cloud.version>Greenwich.SR2</spring-cloud.version>
+		<spring-cloud.version>Hoxton.SR1</spring-cloud.version>
 	<!-- <spring-boot-admin.version>2.1.6</spring-boot-admin.version> -->
 	</properties>
 
@@ -67,6 +67,18 @@
 		<artifactId>spring-boot-starter-data-jpa</artifactId>
 	</dependency>
 
+         <!-- log tracer  -->
+       <!--  <dependency>
+           <groupId>org.springframework.cloud</groupId>
+           <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency> -->
+        
+        <!-- zipkin client  if this is added then sleuth is not required-->
+     <!--     <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+         </dependency> -->
+         
 	<!-- in memory database -->
 	<dependency>
 		<groupId>com.h2database</groupId>
@@ -80,6 +92,10 @@
 		<artifactId>spring-boot-starter-test</artifactId>
 		<scope>test</scope>
 	</dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-security</artifactId>
+	</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -92,14 +108,6 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-	<!--This is required when you need to add spring-boot-admin related configuration -->
-			<!-- <dependency>
-				<groupId>de.codecentric</groupId>
-				<artifactId>spring-boot-admin-dependencies</artifactId>
-				<version>${spring-boot-admin.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency> -->
 		</dependencies>
 	</dependencyManagement>
 	<!--It automatically tries to rewrite archives to make them executable -->
